--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:rim="http://www.blackberry.com/ns/widgets"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="ru.appsm.customkeyboard"
+    id="cordova-custom-keyboard"
     version="0.1.2">
     <name>CustomKeyboard</name>
     <description>Cordova Custom Keyboard Plugin For Ios</description>
